--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "start": "webpack-dev-server --content-base app --port 9090 --inline --hot",
     "build": "rm -rf dist && NODE_ENV=production webpack && cp app/index.html dist/webapp/index.html && cp -R app/assets dist/webapp",
     "dist": "npm run build && hs dist/webapp -p 9090 -P http://localhost:8080",
-    "test": "jest",
+    "test": "jest --config jest.config.js",
     "lint": "eslint app/ --fix"
   }
 }
