--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-sudo: required
-dist: trusty
-
 language: node_js
 node_js:
-  - '4.5'
-
-before_script:
-  - npm install
-
+  - "stable"
+sudo: false
 script:
   - npm run lint
   - npm run test
+  - npm run build
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  local_dir: dist
+  on:
+    branch: master
