--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --content-base app --port 9090 --inline --hot",
-    "build": "rm -rf dist && NODE_ENV=production webpack && cp app/index.html dist/webapp/index.html",
-    "dist": "npm run build && hs dist/webapp -p 9090 -P http://localhost:8080",
+    "build": "rm -rf dist && NODE_ENV=production webpack && cp app/index.html dist/index.html",
+    "dist": "npm run build && hs dist -p 9090",
     "test": "jest --config jest.config.js",
     "lint": "eslint app/ --fix"
   }
