--- a/package.json
+++ b/package.json
@@ -5,35 +5,36 @@
   "description": "Testing AngularJS application with Jest",
   "license": "MIT",
   "devDependencies": {
-    "angular-mocks": "^1.6.9",
-    "autoprefixer": "^7.2.6",
-    "babel-core": "^6.16.0",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.4",
+    "angular-mocks": "^1.7.3",
+    "autoprefixer": "^9.1.3",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^7.1.5",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-angularjs-annotate": "^0.8.2",
+    "babel-plugin-angularjs-annotate": "^0.9.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-angular": "^3.3.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jest": "^21.15.0",
-    "html-minifier": "^3.5.14",
-    "jest": "^21.2.1",
-    "style-loader": "^0.21.0",
-    "webpack": "^3.11.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^21.22.0",
+    "html-minifier": "^3.5.20",
+    "jest": "^23.5.0",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.17.1",
     "webpack-angular-translate": "^2.0.0",
-    "webpack-dev-server": "^2.11.2"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
-    "angular": "^1.6.9",
-    "bootstrap": "^4.1.0",
+    "angular": "^1.7.3",
+    "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.4"
   },
   "scripts": {
     "start": "webpack-dev-server --content-base app --port 9090 --inline --hot",
