--- a/package.json
+++ b/package.json
@@ -5,41 +5,47 @@
   "description": "Testing AngularJS application with Jest",
   "license": "MIT",
   "devDependencies": {
-    "angular-mocks": "^1.7.3",
-    "autoprefixer": "^9.1.3",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.4.2",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "angular-mocks": "^1.7.5",
+    "autoprefixer": "^9.1.5",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-angularjs-annotate": "^0.9.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-polyfill": "^6.16.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^1.0.0",
-    "eslint": "^5.5.0",
+    "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-angular": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.22.0",
+    "eslint-plugin-jest": "^21.24.1",
+    "extract-text-webpack-plugin": "^v4.0.0-beta.0",
     "html-minifier": "^3.5.20",
-    "jest": "^23.5.0",
-    "style-loader": "^0.23.0",
-    "webpack": "^4.17.1",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.20.2",
     "webpack-angular-translate": "^2.0.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "angular": "^1.7.3",
+    "angular": "^1.7.5",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4"
   },
   "scripts": {
-    "start": "webpack-dev-server --content-base app --port 9090 --inline --hot",
-    "build": "rm -rf dist && NODE_ENV=production webpack && cp app/index.html dist/index.html",
-    "dist": "npm run build && hs dist -p 9090",
+    "start": "webpack-dev-server --config webpack-dev.config.js",
+    "build": "webpack --config webpack-prd.config.js",
+    "dist": "npm run build && http-server",
     "test": "jest --config jest.config.js",
     "lint": "eslint app/ --fix"
   }
