--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "angularjs-jest",
+  "name": "angularjs-jest-example",
   "private": true,
   "version": "1.0.0",
   "description": "Testing AngularJS application with Jest",
   "license": "MIT",
   "devDependencies": {
     "angular-mocks": "^1.7.3",
+    "angularjs-jest": "^0.1.2",
     "autoprefixer": "^9.1.3",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
@@ -16,7 +17,6 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^1.0.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-angular": "^3.3.0",
